--- a/index.html
+++ b/index.html
@@ -173,9 +173,17 @@
       margin-right: 6px;
     }
 
-    .form-w { color: #22c55e; }
-    .form-d { color: #e2e8f0; }
-    .form-l { color: #ef4444; }
+    .form-w {
+      color: #22c55e;
+    }
+
+    .form-d {
+      color: #e2e8f0;
+    }
+
+    .form-l {
+      color: #ef4444;
+    }
 
     .popup-bg-logo {
       position: absolute;
