--- a/index.html
+++ b/index.html
@@ -121,6 +121,14 @@
       gap: 6px;
       z-index: 1;
     }
+    
+    .popup-content {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      gap: 6px;
+      z-index: 1;
+    }
 
     .popup-content table {
       width: 100%;
