--- a/index.html
+++ b/index.html
@@ -119,6 +119,15 @@
       display: flex;
       flex-direction: column;
       gap: 6px;
+      margin-top: 12px; 
+      z-index: 1;
+    }
+
+    .popup-content {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      gap: 6px;
       z-index: 1;
     }
 
